10.nov (ws)
      - removed Painter() wrapper
5.nov (ws)
      - fix tuplets in parts
4.nov (ws)
      - fix 1.x backward compatibility for modified beams
      - playback fixes
3.nov (ws)
      - fix #11197: Capella import crashes
      - fix #12476: Tie created under note if clicked in note entry
      - fix #10471: Piano keyboard note entry
2.nov (lv)
      - partial implementation of #13452: MusicXML: optionally ignore layout information on export
1.nov (lv)
      - continued implementation of #13451: MusicXML: optionally ignore layout information on import
      (ws)
      - fix #13433: Typing "S", undo and "S" causes crash (patch from Gai-Luron)
      - playback fixes for staccato/tenuto
      - extend selection dialog: "same subtype"
      - fix #13413: navigator issues with single page (catch case were navigator view
        rectangle is bigger than navigator window)
31.oct (lv)
      - partial implementation of #13451: MusicXML: optionally ignore layout information on import
       (ws)
      - fix #3155: Color and position of flags/hook are not saved
      - fix #13413: navigator issues with single page
      - fix #12695: navigator not updating when adding/removing pages
      - first "figured bass" support (shift+l); works similar as lyrics
      - reduce flicker when updating navigator
      - fix #3798: Grace notes were created with stem direction "UP", should be "AUTO"
30.oct (ws)
      - fix #9307: Nested tuplets causes crash
      (la)
      - fix #11473: Preference values overwritten on program initialisation
      - fix #11952: Default SoundFont doesn't sound or appear in Synthesizer
29.oct (ws)
      - fix #4748: Right click on note should also show measure and staff properties
      - fix #13405: Page must be clicked to hear sound change in Mixer
      - fix #12572: Clicking page during playback shortens sound of notes
      - fix #3573: Volta brackets do not anchor to nearest bar line
      - implement #3704: Small note heads in chords